--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,11 +9,42 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: $body-bg;
+
+  background-color: rgb(216, 242, 255);
 }
 
 main {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
+input[type="color"]
+{
+    border: 2px solid #e5e5e5;
+    padding: 0px;
+    height: 100%;
+    width: 100%;
 
+}
 
+#lists
+{
+    overflow-x: scroll;
+    background-color: transparent;
+    scrollbar-color: transparent transparent;
+}
+#lists::-webkit-scrollbar
+{
+    color: transparent
+}
+
+#lists>div>div
+{
+    height: 70vh;
+    width: 25vw;
+    background-color: whitesmoke;
+}
+
+#lists [id$="-tasks"]
+{
+    overflow-y: scroll;
+}
