--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14095,10 +14095,38 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: #e5e5e5;
+  background-color: #d8f2ff;
 }
 
 main {
   flex-grow: 1;
+}
+
+input[type=color] {
+  border: 2px solid #e5e5e5;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+#lists {
+  overflow-x: scroll;
+  background-color: transparent;
+  scrollbar-color: transparent transparent;
+}
+
+#lists::-webkit-scrollbar {
+  color: transparent;
+}
+
+#lists > div > div {
+  height: 70vh;
+  width: 25vw;
+  background-color: whitesmoke;
+}
+
+#lists [id$=-tasks] {
+  overflow-y: scroll;
 }
 
 /*# sourceMappingURL=main.css.map */
