--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -47,7 +47,7 @@ input[type="color"]
 #lists [id$="-tasks"]
 {
     overflow-y: scroll;
-    overflow-x: visible;
+    // overflow-x: visible;
     overflow-wrap: anywhere;
 }
 
