--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -57,10 +57,17 @@ input[type="color"]
     text-overflow: ellipsis;
 }
 
+
 @media only screen and (max-width: 992px)
 {
     #lists>div>div
     {
         width: 80vw;
+    }
+
+    .on-hover
+    {
+        opacity: 1;
+        pointer-events: all;
     }
 }
